syntax = "proto3";
package fitness_aggregator.v1;

option go_package = "gitlab.com/purposeless-lab/monorepo/fitness-aggregator/server/api/proto/v1";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Authorizer {
  rpc Auth(AuthRequest) returns (AuthResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;

    option (google.api.http) = {
      post: "/api/v1/auth",
      body: "*",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.AuthResponse"}
          }
        }
      }
    };
  }
}

message AuthRequest {
  string phone = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}