syntax = "proto3";
package fitness_aggregator.v1;

option go_package = "gitlab.com/purposeless-lab/monorepo/fitness-aggregator/server/api/proto/v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "v1/entities.proto";
import "v1/utils.proto";

service SearchEngine {
  rpc SearchClients(ClientsFilter) returns (SearchClientsResponse) {
    option idempotency_level = IDEMPOTENCY_UNKNOWN;

    option (google.api.http) = {
      get: "/api/v1/search/client",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.SearchClientsResponse"}
          }
        }
      }
    };
  }

  rpc SearchTrainers(TrainersFilter) returns (SearchTrainersResponse) {
    option idempotency_level = IDEMPOTENCY_UNKNOWN;

    option (google.api.http) = {
      get: "/api/v1/search/trainer",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.SearchTrainersResponse"}
          }
        }
      }
    };
  }

  rpc SearchStudios(StudiosFilter) returns (SearchStudiosResponse) {
    option idempotency_level = IDEMPOTENCY_UNKNOWN;

    option (google.api.http) = {
      get: "/api/v1/search/studio",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.SearchStudiosResponse"}
          }
        }
      }
    };
  }

  rpc SearchClasses(ClassesFilter) returns (SearchClassesResponse) {
    option idempotency_level = IDEMPOTENCY_UNKNOWN;

    option (google.api.http) = {
      get: "/api/v1/search/class",
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      responses: {
        key: "200",
        value: {
          schema: {
            json_schema: {ref: ".fitness_aggregator.v1.SearchClassesResponse"}
          }
        }
      }
    };
  }
}

message ClientsFilter {
  string id_substring = 1;
  string phone_substring = 2;
  string name_substring = 3;
  string picture_uri_substring = 4;
  google.protobuf.Timestamp birth_date_interval_begin = 5;
  google.protobuf.Timestamp birth_date_interval_end = 6;
  repeated Gender genders = 7;
  google.protobuf.Timestamp created_at_interval_begin = 8;
  google.protobuf.Timestamp created_at_interval_end = 9;
  google.protobuf.Timestamp updated_at_interval_begin = 10;
  google.protobuf.Timestamp updated_at_interval_end = 11;

  repeated string class_name_substrings = 12;

  int32 limit = 13;
  string first_id = 14;
  string last_id = 15;
}

message SearchClientsResponse {
  repeated Person clients = 1;
  PageInfo page_info = 2;
}

message TrainersFilter {
  string id_substring = 1;
  string phone_substring = 2;
  string name_substring = 3;
  string picture_uri_substring = 4;
  google.protobuf.Timestamp birth_date_interval_begin = 5;
  google.protobuf.Timestamp birth_date_interval_end = 6;
  repeated Gender genders = 7;
  google.protobuf.Timestamp created_at_interval_begin = 8;
  google.protobuf.Timestamp created_at_interval_end = 9;
  google.protobuf.Timestamp updated_at_interval_begin = 10;
  google.protobuf.Timestamp updated_at_interval_end = 11;

  repeated string class_name_substrings = 12;
  repeated string studio_address_substrings = 13;

  int32 limit = 14;
  string first_id = 15;
  string last_id = 16;
}

message SearchTrainersResponse {
  repeated Trainer trainers = 1;
  PageInfo page_info = 2;
}

message StudiosFilter {
  string id_substring = 1;
  string address_substring = 2;
  google.protobuf.Timestamp created_at_interval_begin = 3;
  google.protobuf.Timestamp created_at_interval_end = 4;
  google.protobuf.Timestamp updated_at_interval_begin = 5;
  google.protobuf.Timestamp updated_at_interval_end = 6;

  repeated string class_name_substrings = 7;
  repeated string trainer_name_substrings = 8;

  int32 limit = 9;
  string first_id = 10;
  string last_id = 11;
}

message SearchStudiosResponse {
  repeated Studio studios = 1;
  PageInfo page_info = 2;
}

message ClassesFilter {
  string id_substring = 1;
  string name_substring = 2;
  google.protobuf.Timestamp time_interval_begin = 3;
  google.protobuf.Timestamp time_interval_end = 4;
  google.protobuf.Timestamp created_at_interval_begin = 5;
  google.protobuf.Timestamp created_at_interval_end = 6;
  google.protobuf.Timestamp updated_at_interval_begin = 7;
  google.protobuf.Timestamp updated_at_interval_end = 8;
  bool only_available = 9;

  repeated string studio_address_substrings = 10;
  repeated string trainer_name_substrings = 11;
  repeated string client_name_substrings = 12;

  int32 limit = 13;
  string first_id = 14;
  string last_id = 15;
}

message SearchClassesResponse {
  repeated Class classes = 1;
  PageInfo page_info = 2;
}